[package]
name = "ruproxy"
version = "0.1.0"
edition = "2021"
description = "A multi-protocol proxy server (Hysteria2 + VLESS + Reality) in Rust"
license = "MIT"

[[bin]]
name = "ruproxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC (Hysteria2)
quinn = "0.11"
quinn-proto = "0.11"

# HTTP/3 (Hysteria2 auth uses H3)
h3 = "0.0.8"
h3-quinn = "0.0.10"

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Self-signed certificate generation
rcgen = "0.13"

# WebSocket (VLESS ws transport)
tokio-tungstenite = "=0.20.1"
futures-util = "0.3"

# UUID (VLESS auth + TUIC user auth)
uuid = { version = "1", features = ["v4", "serde"] }

# TUIC: humantime for duration parsing in config
humantime-serde = "1"

# TUIC: socket2 for UDP socket creation
socket2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Byte utilities
bytes = "1"

# Random number generation
rand = "0.8"

# Shadowsocks AEAD (sha1/md5 moved to Reality crypto block below)

# Hyper HTTP server (used by XHTTP/splithttp transport)
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "client", "client-legacy"] }
http-body-util = "0.1"
http-body = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Reality transport dependencies
x25519-dalek = { version = "2", features = ["static_secrets"] }

base64 = "0.22"        # decode x25519 keys from config
hex = "0.4"            # decode Reality short IDs from config
libc = "0.2"           # MSG_PEEK for TLS ClientHello inspection

ring = "0.17"          # rustls crypto provider (main.rs: ring::default_provider)

# Reality crypto (新增，ring 本身没有 AES-GCM / HKDF 的便捷接口)
aes-gcm = "0.10"           # AES-128/256-GCM (Reality + Shadowsocks AEAD)
chacha20poly1305 = "0.10"  # ChaCha20-Poly1305 (Reality + Shadowsocks AEAD)
hkdf = "0.12"              # HKDF (Reality auth_key + Shadowsocks ss-subkey)
hmac = "0.12"              # HMAC-SHA512 for Reality certificate Signature
sha2 = "0.10"              # SHA-256/SHA-512 for HKDF and HMAC
sha1 = "0.10"              # SHA-1 for Shadowsocks HKDF-SHA1 subkey derivation
md-5 = "0.10"               # MD5 for Shadowsocks EVP_BytesToKey
crc32fast = "1"            # VMess auth_id CRC32 verification

# WireGuard server
boringtun = { version = "0.6", default-features = false }
ip_network = "0.4"
ip_network_table = "0.2"
# smoltcp: userspace TCP/IP stack for WireGuard VPN exit
smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "async",
] }

[profile.release]
strip         = "symbols"  # 剥离调试符号表，不影响运行
debug         = false      # 不内嵌调试信息
lto           = "thin"     # 跨 crate 裁掉未调用的代码，thin 构建速度可接受
codegen-units = 1          # 单编译单元，允许更完整的内联分析
